--- a/login.html
+++ b/login.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Language Solutions - Iniciar Sesión</title>
-    <link rel="stylesheet" href="/languagesolutionsa1/style.css" />
-    <link rel="manifest" href="/languagesolutionsa1/manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="/languagesolutionsa1/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/languagesolutionsa1//favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="/languagesolutionsa1//favicon-16x16.png">
-   <link rel="manifest" href="/languagesolutionsa1//site.webmanifest">  
+    <link rel="stylesheet" href="/languagesolutionsb1/style.css" />
+    <link rel="manifest" href="/languagesolutionsb1/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="/languagesolutionsb1/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/languagesolutionsb1//favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/languagesolutionsb1//favicon-16x16.png">
+   <link rel="manifest" href="/languagesolutionsb1//site.webmanifest">  
 
 </head>
 <body>
     <div id="pantalla-login" class="pantalla-activa" style="text-align: center; padding: 2rem;">
         
-        <img src="/languagesolutionsa1/eis.jpg" alt="Language Solutions Logo" style="width: 120px; height: 120px;">
+        <img src="/languagesolutionsb1/eis.jpg" alt="Language Solutions Logo" style="width: 120px; height: 120px;">
         <h1 style="margin-top: 1rem;">Language Solutions</h1>
-        <p>Aprende Vocabulario de A1 de forma interactiva</p>
+        <p>Aprende Vocabulario de B1 de forma interactiva</p>
 
         <form id="form-login" style="margin-top: 2rem;">
             <input type="email" id="input-email" placeholder="Correo del colegio" required>
