--- a/teacher.html
+++ b/teacher.html
@@ -71,7 +71,7 @@
             </div>
             <button type="submit" id="btn-add student">Añadir Profesor</button>
         </form>
-        <div id="status-message"></div>
+        <div id="status-message-teacher"></div>
     </div>
 
     <div class="form-container">
@@ -91,7 +91,7 @@
             </div>
             <button type="submit" id="btn-add-student">Añadir Alumno</button>
         </form>
-        <div id="status-message"></div>
+        <div id="status-message-student"></div>
     </div>
 
     <div id="student-list">
